--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,10 @@
                 </div>
             </div>
 
+            <div class="img-fluid ms-lg-5 ps-lg-5">
+                <img class="img-fluid" width="1320vw" src="about_us.jpg" alt="IMG">
+            </div>
+
             <div class="container my-4">
                 <h2>Contact Us</h2>
                 <form>
